fixed overflow issue for portfolio

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,5 @@
-/* .bg-primary {
-    background-color: #4ea8de !important;
+/* .prevent-runoff {
+    overflow: hidden;
 } */
 
 /* Nice: 
